WIP: migrating to new FFI-based Java library.