@@ -3,15 +3,14 @@
   :url "https://github.com/aphyr/hegel-clj"
   :license {:name "EPL-2.0 OR GPL-2.0-or-later WITH Classpath-exception-2.0"
             :url "https://www.eclipse.org/legal/epl-2.0/"}
-  :dependencies [; We only use byte-streams in, like, two places--could
-                 ; probably pull it out easily.
-                 [org.clj-commons/byte-streams "0.3.4"]
-                 [org.clojure/clojure "1.12.2" :scope "provided"]
+  :dependencies [[dev.hegel/hegel "0.4.0"]
+                 [org.clojure/clojure "1.12.5" :scope "provided"]
                  [org.clojure/tools.logging "1.3.1"]
-                 [mvxcvi/clj-cbor "1.1.1"]
+                 [org.opentest4j/opentest4j "1.3.0"]
                  ]
   :repl-options {:init-ns hegel-clj.core}
   :java-source-paths ["src"]
+  :java-opts ["--enable-native-access=ALL-UNNAMED"]
   :profiles {:dev {:dependencies [[org.clojure/test.check "1.1.3"]
                                   [org.slf4j/slf4j-simple "2.0.17"]]}}
   :test-selectors {:default (constantly true)
